--- a/front-app/package.json
+++ b/front-app/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "antd": "^3.4.5",
+    "axios": "^0.18.0",
+    "cron": "^1.3.0",
     "firebase": "^4.13.1",
     "moment": "^2.22.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
   },
   "scripts": {
     "start": "react-scripts start",
