--- a/front-app/package.json
+++ b/front-app/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "antd": "^3.4.5",
     "firebase": "^4.13.1",
+    "lodash.filter": "^4.6.0",
     "lodash.foreach": "^4.5.0",
+    "lodash.map": "^4.6.0",
     "moment": "^2.22.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
