--- a/front-app/package.json
+++ b/front-app/package.json
@@ -8,12 +8,12 @@
     "cron": "^1.3.0",
     "firebase": "^4.13.1",
     "lodash.filter": "^4.6.0",
+    "lodash.find": "^4.6.0",
     "lodash.foreach": "^4.5.0",
     "lodash.map": "^4.6.0",
     "moment": "^2.22.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4",
+    "react-dom": "^16.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
